feat: add flags options and suggestions